2006-01-19  Roland Levillain  <roland@lrde.epita.fr>

	Support Vcs.

	* configure.ac: Bump to 1.0.4a.
	* vcs/monoburg.rb: New.
	* COPYING, INSTALL: New.

2005-10-07  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* TODO: Modify to reflect current project status.

2005-09-16  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/named_subtree.h,
	* src/named_subtree.c: New. Named subtree related functions.
	Allow use in multi-rules.
	
	* src/rule.c,
	* src/rule.h: Move named subtree related functions to
	`src/named_subtree.[ch]'.
	Move memory cleaning related functions to `src/mem_clean.[ch]'
	
	* src/mem_clean.c,
	* src/mem_clean.h: New. Memory cleaning related functions.
	
	* src/emit_files.c: Use `mem_clean.h'.
	
	* src/parser.y,
	* src/emit_functions.c,
	* src/emit_cost.c: Allow named subtree in multi-rules.
	
	* src/main.c: Fix to (close to) compile with -pedantic.
	
	* src/Makefile.am: Add new files.
	* tests/sample.c.ref: Regen.
	
	* configure.ac,
	* NEWS: Bump to 1.0.4.

2005-09-16  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* tests/Makefile.am: Use diff(1) instead of cmp(1) if VERBOSE is set.
	Copy the failing C file to `file.c.fail'.


2005-09-16  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/emit_functions.c (emit_emitter_func): Fix small bug on #define
	optimization.

2005-09-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* tests/Makefile.am: Add  monoburg$(EXEEXT) to the dependencies of
	.c files generated from .brg.

2005-09-12  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Bump to 1.0.3a.
	Check for Glib >= 2.6 (needed for GOptions).

2005-09-11  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* configure.ac,
	* NEWS: Bump to 1.0.3.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* configure.ac,
	* NEWS: Bump to 1.0.2b.

2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* src/monoburg.1: Remove. Move to...
	* man/monoburg.1: New. ... here and update.